// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Execution target group tests when execution target group- delegate is selected 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      action="#"
      class="FormikForm--main"
    >
      <div>
        <div
          class="bp3-form-group"
          data-id="Blueprint3.RadioGroup-1-0"
        >
          <label
            class="bp3-label"
            for="spec.onDelegate"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="targetGrp"
            >
              onDelegate
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="StyledProps--font StyledProps--main fieldSelectorContainer"
            >
              <div
                class="bp3-form-group"
                data-id="Blueprint3.RadioGroup-1-1"
                style="flex-grow: 1; margin-bottom: 0px;"
              >
                <label
                  class="bp3-label"
                  for="spec.onDelegate"
                >
                  <div
                    class="formLabel"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="test-form_spec.onDelegate"
                    >
                      pipeline.execTargetLabel
                    </span>
                    <div
                      class="bp3-popover-wrapper typeSelectorWrapper"
                    >
                      <div
                        class="bp3-popover-target typeSelector"
                      >
                        <button
                          class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main btn Button--iconOnly Button--without-shadow"
                          type="button"
                        >
                          <span
                            class="bp3-button-text"
                          >
                            <span
                              class="bp3-icon StyledProps--main icon fixed"
                              data-icon="fixed-input"
                            >
                              <svg
                                height="12"
                                viewBox="0 0 9 9"
                                width="12"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                  fill="currentColor"
                                />
                              </svg>
                            </span>
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div>
                    <label
                      class="bp3-control bp3-radio bp3-inline"
                    >
                      <input
                        name="Blueprint3.RadioGroup-1"
                        type="radio"
                        value="targethost"
                      />
                      <span
                        class="bp3-control-indicator"
                      />
                      cd.specifyTargetHost
                    </label>
                    <label
                      class="bp3-control bp3-radio bp3-inline"
                    >
                      <input
                        checked=""
                        name="Blueprint3.RadioGroup-1"
                        type="radio"
                        value="delegate"
                      />
                      <span
                        class="bp3-control-indicator"
                      />
                      pipeline.delegateLabel
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`Execution target group tests when execution target group- targethost is selected 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      action="#"
      class="FormikForm--main"
    >
      <div>
        <div
          class="bp3-form-group bp3-intent-primary"
          data-id="Blueprint3.RadioGroup-0-0"
        >
          <label
            class="bp3-label"
            for="spec.onDelegate"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="targetGrp"
            >
              onDelegate
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="StyledProps--font StyledProps--main fieldSelectorContainer"
            >
              <div
                class="bp3-form-group"
                data-id="Blueprint3.RadioGroup-0-1"
                style="flex-grow: 1; margin-bottom: 0px;"
              >
                <label
                  class="bp3-label"
                  for="spec.onDelegate"
                >
                  <div
                    class="formLabel"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="test-form_spec.onDelegate"
                    >
                      pipeline.execTargetLabel
                    </span>
                    <div
                      class="bp3-popover-wrapper typeSelectorWrapper"
                    >
                      <div
                        class="bp3-popover-target typeSelector"
                      >
                        <button
                          class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main btn Button--iconOnly Button--without-shadow"
                          type="button"
                        >
                          <span
                            class="bp3-button-text"
                          >
                            <span
                              class="bp3-icon StyledProps--main icon fixed"
                              data-icon="fixed-input"
                            >
                              <svg
                                height="12"
                                viewBox="0 0 9 9"
                                width="12"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                  fill="currentColor"
                                />
                              </svg>
                            </span>
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div>
                    <label
                      class="bp3-control bp3-radio bp3-inline"
                    >
                      <input
                        checked=""
                        name="Blueprint3.RadioGroup-0"
                        type="radio"
                        value="targethost"
                      />
                      <span
                        class="bp3-control-indicator"
                      />
                      cd.specifyTargetHost
                    </label>
                    <label
                      class="bp3-control bp3-radio bp3-inline"
                    >
                      <input
                        name="Blueprint3.RadioGroup-0"
                        type="radio"
                        value="delegate"
                      />
                      <span
                        class="bp3-control-indicator"
                      />
                      pipeline.delegateLabel
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`Execution target group tests when intent hasError 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      action="#"
      class="FormikForm--main"
    >
      <div>
        <div
          class="bp3-form-group"
          data-id="Blueprint3.RadioGroup-2-0"
        >
          <label
            class="bp3-label"
            for="spec.onDelegate"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="targetGrp"
            >
              onDelegate
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="StyledProps--font StyledProps--main fieldSelectorContainer"
            >
              <div
                class="bp3-form-group"
                data-id="Blueprint3.RadioGroup-2-1"
                style="flex-grow: 1; margin-bottom: 0px;"
              >
                <label
                  class="bp3-label"
                  for="spec.onDelegate"
                >
                  <div
                    class="formLabel"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="test-form_spec.onDelegate"
                    >
                      pipeline.execTargetLabel
                    </span>
                    <div
                      class="bp3-popover-wrapper typeSelectorWrapper"
                    >
                      <div
                        class="bp3-popover-target typeSelector"
                      >
                        <button
                          class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main btn Button--iconOnly Button--without-shadow"
                          type="button"
                        >
                          <span
                            class="bp3-button-text"
                          >
                            <span
                              class="bp3-icon StyledProps--main icon fixed"
                              data-icon="fixed-input"
                            >
                              <svg
                                height="12"
                                viewBox="0 0 9 9"
                                width="12"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                  fill="currentColor"
                                />
                              </svg>
                            </span>
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div>
                    <label
                      class="bp3-control bp3-radio bp3-inline"
                    >
                      <input
                        name="Blueprint3.RadioGroup-2"
                        type="radio"
                        value="targethost"
                      />
                      <span
                        class="bp3-control-indicator"
                      />
                      cd.specifyTargetHost
                    </label>
                    <label
                      class="bp3-control bp3-radio bp3-inline"
                    >
                      <input
                        checked=""
                        name="Blueprint3.RadioGroup-2"
                        type="radio"
                        value="delegate"
                      />
                      <span
                        class="bp3-control-indicator"
                      />
                      pipeline.delegateLabel
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;
